--- a/package.json
+++ b/package.json
@@ -8,25 +8,38 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "datatables.net": "^1.13.4",
+    "datatables.net-bs5": "^1.13.4",
+    "datatables.net-dt": "^1.13.4",
+    "datatables.net-responsive-bs5": "^2.4.1",
+    "datatables.net-select": "^1.6.2",
+    "datatables.net-vue3": "^2.1.0",
+    "font-awesome": "^4.7.0",
+    "vue": "^3.2.13",
+    "vue-loader": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@babel/core": "^7.21.0",
+    "@babel/eslint-parser": "^7.19.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^9.9.0",
     "fibers": "^5.0.3",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0"
   },
   "eslintConfig": {
-    "root": true,
+    "root": false,
     "env": {
       "node": true
     },
