--- a/package.json
+++ b/package.json
@@ -15,14 +15,9 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
-    "datatables.net": "^1.13.4",
-    "datatables.net-bs5": "^1.13.4",
-    "datatables.net-dt": "^1.13.4",
-    "datatables.net-responsive-bs5": "^2.4.1",
-    "datatables.net-select": "^1.6.2",
-    "datatables.net-vue3": "^2.1.0",
     "font-awesome": "^4.7.0",
     "vue": "^3.2.13",
+    "vue-good-table-next": "^0.2.1",
     "vue-loader": "^17.0.1"
   },
   "devDependencies": {
